--- a/style.css
+++ b/style.css
@@ -2,53 +2,66 @@
 *::after
 *::before{
     box-sizing: border-box;
+    margin: 0;
     
     
 }
 
 body{
     height: 100%;
+    width: 100%;
+    
+   
     margin: 0;
     padding: 0;
-    font-size: 1.8em;
+    font-size: 2em;
     
     text-align: center;
-    background:linear-gradient(darkcyan,darkgray);
-    
-    
+    background:linear-gradient(silver,darkgray);    
 }
 .container{
+    
+   
     
     max-width: min(900px,90vw);
     min-height:40vh ;
     padding: 2%;
-    margin: 1em auto 1em auto;
-    background-color: tomato;
+    margin: 6rem auto 1em auto;
+    background-color:rgb(197, 202, 202);
     display: grid;
     grid-template-columns: 1fr 1fr;
+    border-radius: 2rem;
+    border: 5px solid slategray;
+    place-items: center;
     
     
     
 }
-#title{
-    margin: 1em;
-}
+
 
 #theForm{
     margin: 1em;
     display:flex;
     flex-direction: column;
     align-items: center;
+    border: 2px solid rgb(60, 57, 79);
+    border-radius: 1rem;
+    padding: 2rem;
 }
 #theForm input{
-    height: 20px;
+    height: 25px;
+    font-size: 1rem;
+    width: 80%;
 }
 #category{
-    height: 25px;
+    height: 30px;
+    width: 60%;
 }
 #category option{
     text-align: center;
     font-size: 1em;
+
+   
 }
 
 #theForm input,
@@ -59,7 +72,15 @@ body{
     cursor: pointer;
     margin-top: 3em;
     width: 40%;
+    height: 2rem;
+    background-color: aquamarine;  
+    box-shadow: -5px 5px 5px rgb(118, 111, 111);
+}
+#btn:hover{
+    transform: translate(4px,-4px);
+    box-shadow: -10px 8px 8px rgb(118, 111, 111);
     
+
 
 }
 .Products{
@@ -67,17 +88,47 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 1em;
+    margin: 0.5em;
  
     
     
 }
+.product-container{
+     border: 2px solid rgb(60, 57, 79);
+     padding: 2px;
+     border-radius: 1rem;
+}
+
 .Products div{
     margin: 1em;
 }
-@media screen and (max-width:400px){
+@media screen and (max-width:610px){
     .container{
         grid-template-columns: 1fr;
     }
     
+}
+.Products div:first-child{
+    margin-top: 0;
+}
+.Products div:first-child h4{
+    margin-top: 0;
+}
+
+
+.header{
+    top:0;
+    display: grid;
+    place-items: center;
+    height: 4rem;
+    position: fixed;
+    width: 100%;
+    color: white;
+    background-color: black;
+    
+}
+#p-title{
+    padding: 0;
+    margin: 0;
+
 }
